--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,7 @@ html, body {
 
 	 .card .content-field{
 		border-radius: 10px;
-		justify-content: center;
+		justify-content: flex-start;
 		background-size: cover;
 		background-position: left;
 	}
@@ -501,7 +501,8 @@ html, body {
 	.galleryimage {
 		margin: 10px 0;
 		display: flex;
-		height: 45vh;
+		width: 20%;
+		min-width: 200px;
 		aspect-ratio: 1/1;
 		border-radius: 10px;
 		overflow: hidden;
