--- a/styles.css
+++ b/styles.css
@@ -402,7 +402,7 @@ html, body {
 	justify-content: center;
 	align-items: flex-start;
 	overflow: hidden;
-	margin: 10px 0;
+	margin: 0 0 10px 0;
 	background-position: center; /* kuvan sijainti taustalla */
 	background-size: cover;
 }
@@ -492,19 +492,18 @@ html, body {
 .gallery {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 0 25px;
+	gap: 0 20px;
 	height: 100%;
 	width: 100%;
-	margin-bottom: 20px;
 }
 
 	.galleryimage {
-		margin: 10px 0;
 		display: flex;
-		width: 20%;
+		width: 23%;
 		min-width: 200px;
 		aspect-ratio: 1/1;
 		border-radius: 10px;
+		margin: 10px 0 10px;
 		overflow: hidden;
 		justify-content: center;
 		align-items: center;
@@ -517,6 +516,7 @@ html, body {
 
 	.galleryimage:hover {
 		margin-top: 0px;
+		margin-bottom: 20px;
 		transition: 0.2s ease-in-out;
 	}
 
@@ -527,18 +527,6 @@ html, body {
 
 		.galleryimage h3 {
 			display: none;
-		}
-
-		.galleryimage:hover h3 {
-			display: flex;
-			height: 100%;
-			width: 100%;
-			justify-content: center;
-			align-items: center;
-			background: linear-gradient(
-				rgba(0, 0, 0, 0.8), 
-				rgba(0, 0, 0, 0.8)
-			);
 		}
 
 
