--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,7 @@ html, body {
 	width: 100%;
 	border-radius: 10px;
 	margin: 10px 0 20px 0;
-	gap: 0 5%;
+	gap: 20px 5%;
 	/* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
 	overflow: hidden;
 	background-position: center; /* kuvan sijainti taustalla */
