--- a/styles.css
+++ b/styles.css
@@ -551,8 +551,9 @@ html, body {
 		.menubutton {
 			display: none; /* Animaation kannalta relevantti */
 			justify-content: space-between;
-			width: calc(100% - 15px);
-			padding-right: 0;
+			width: 90%;
+			padding-right: 5%;
+			padding-left: 5%;
 			background-color: var(--primary);
 			margin-bottom: 2px;
 			cursor: pointer;
