--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ html, body {
 	justify-content: center;
 	align-items: flex-start;
 	overflow: hidden;
-	margin: 0 0 10px 0;
+	margin: 0 0 20px 0;
 	background-position: left; /* kuvan sijainti taustalla */
 	background-size: cover;
 }
@@ -442,7 +442,7 @@ html, body {
 	width: 100%;
 	border-radius: 10px;
 	margin: 10px 0 20px 0;
-	gap: 20px 5%;
+	gap: 0 5%;
 	/* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); */
 	overflow: hidden;
 	background-position: center; /* kuvan sijainti taustalla */
