--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 html, body {
 	font-family: 'Inter', sans-serif;
-	font-size: 14px;
+	font-size: 3vh;
 	color: var(--text);
 	margin: 0;
 	min-height: 100vh;
@@ -59,7 +59,7 @@ html, body {
 
 	h1 {
 		font-weight: 400;
-		font-size: 48px;
+		font-size: 10vh;
 		margin: 0 0 25px 0;
 		font-family: 'DM Serif Text', serif;
 		color: var(--primary);
@@ -71,13 +71,13 @@ html, body {
 
 	h2 {
 		font-weight: bold;
-		font-size: 26px;
+		font-size: 6vh;
 		margin: 0 0 20px 0;
 	}
 
 	h3 {
 		font-weight: 600;
-		font-size: 18px;
+		font-size: 4vh;
 		margin: 0 0 15px 0;
 	}
 
@@ -182,7 +182,7 @@ html, body {
 
 		.minisection:has(.button) {
 			margin: 0 0 20px 0;
-			gap: 20px;
+			gap: 20px 5%;
 		}
 
 
@@ -214,7 +214,7 @@ html, body {
 		height: 50px;
 		padding: 0;
 		align-items: center;
-		font-size: 20px;
+		font-size: 4vh;
 	}
 
 	.menu {
@@ -227,7 +227,6 @@ html, body {
 		.menubutton {
 			display: flex;
 			flex-direction: row;
-			font-size: 16px;
 			height: 50px;
 			gap: 8px;
 			align-items: center;
