--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 html, body {
 	font-family: 'Inter', sans-serif;
-	font-size: 3vh;
+	font-size: 14px;
 	color: var(--text);
 	margin: 0;
 	min-height: 100vh;
@@ -59,7 +59,7 @@ html, body {
 
 	h1 {
 		font-weight: 400;
-		font-size: 10vh;
+		font-size: 48px;
 		margin: 0 0 25px 0;
 		font-family: 'DM Serif Text', serif;
 		color: var(--primary);
@@ -71,13 +71,13 @@ html, body {
 
 	h2 {
 		font-weight: bold;
-		font-size: 6vh;
+		font-size: 30px;
 		margin: 0 0 20px 0;
 	}
 
 	h3 {
 		font-weight: 600;
-		font-size: 4vh;
+		font-size: 18px;
 		margin: 0 0 15px 0;
 	}
 
@@ -214,7 +214,7 @@ html, body {
 		height: 50px;
 		padding: 0;
 		align-items: center;
-		font-size: 4vh;
+		font-size: 20px;
 	}
 
 	.menu {
