--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ html, body {
 		--primary: #044d4d;
 		--secondary: #d9b100;
 		--text: #262626;
-		--text-light: rgba(0, 0, 0, 0.4);
 		--white-light: rgba(255, 255, 255, 0.7);
 		
 		--vuorox-primary: #023047;
@@ -40,7 +39,7 @@ html, body {
 		--vuorox-background: #E2E9ED;
 		--vuorox-tertiary: #64aade;
 		
-		--lekatech-background: #3B4552;
+		--lekatech-background: #495666;
 		--lekatech-blue: #32B3FF;
 		
 		--cloubi-background: #00AAB5;
@@ -135,6 +134,7 @@ html, body {
 	img {
 		max-width: 100%;
 		object-fit: cover;
+		width: fit-content;
 	}
 
 	.button {
@@ -473,7 +473,7 @@ header[active] {
 	display: flex;
 	border-radius: 10px;
 	max-height: 65vh;
-	margin: 15px 0;
+	margin: 0 0 20px 0;
 	overflow: hidden;
 	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
 	width: fit-content;
