--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ html, body {
 
 	p {
 		font-weight: normal;
-		margin: 0 0 30px 0;
+		margin: 0 0 35px 0;
 		line-height: 1.6;
 	}
 
@@ -422,7 +422,7 @@ header[active] {
 	display: flex;
 	flex-direction: column;
 	width: 90%;
-	padding: 25px 5%;
+	padding: 50px 5% 25px 5%;
 	background-position: center; /* kuvan sijainti taustalla */
 	background-attachment: none; /* pysyykö paikallaan vai ei */
 	background-size: cover;
@@ -430,7 +430,7 @@ header[active] {
 	scroll-margin-top: 50px;
 }
 
-	.content-field:first-of-type{
+	.first{
 		padding-top: 100px;
 	}
 
@@ -441,7 +441,7 @@ header[active] {
 	}
 
 	.content-field ul {
-		margin: 0 0 20px 0;
+		margin: 0 0 35px 0;
 		line-height: 1.6;
 		padding-inline-start: 1em;
 	}
@@ -487,7 +487,7 @@ header[active] {
 	gap: 0 20px;
 	height: 100%;
 	width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 }
 
 	.galleryimage {
