--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,6 @@ header[active] {
 .hero {
 	width: 100%;
 	height: fit-content;
-	min-height: 100vh; /* 100vh tunnuksella koko sivun leveydelle */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -475,12 +474,12 @@ header[active] {
 .screen {
 	display: flex;
 	border-radius: 10px;
-	max-height: 65vh;
 	margin: 0 0 20px 0;
 	overflow: hidden;
 	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
-	width: fit-content;
+	max-width: 100%;
 	height: fit-content;
+	max-height: 65vh;
 }
 
 .gallery {
