--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 html, body {
 	font-family: 'Inter', sans-serif;
-	font-size: 14px;
+	font-size: 16px;
 	color: var(--text);
 	margin: 0;
 	min-height: 100vh;
@@ -479,6 +479,7 @@ header[active] {
 	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
 	max-width: 100%;
 	height: fit-content;
+	object-fit: contain;
 	max-height: 65vh;
 }
 
