--- a/styles.css
+++ b/styles.css
@@ -478,7 +478,7 @@ header[active] {
 	overflow: hidden;
 	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
 	object-fit: contain;
-	height: max-content;
+	height: inherit;
 	max-height: 65vh;
 }
 
