--- a/styles.css
+++ b/styles.css
@@ -129,13 +129,19 @@ html, body {
 		color: var(--text)
 	}
 
-	.fullscreen {
-		min-height: calc(100vh - 100px);
-	}
-
 	img {
 		max-width: 100%;
-		height: inherit;
+		object-fit: contain;
+	}
+
+	.screen {
+		border-radius: 10px;
+		margin: 0 0 20px 0;
+		overflow: hidden;
+		box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
+		max-height: 65vh;
+		width: fit-content;
+		height: fit-content;
 	}
 
 	.button {
@@ -402,9 +408,6 @@ header[active] {
 	align-items: center;
 	overflow: hidden;
 	margin: 0 0 20px 0;
-	background-repeat: no-repeat;
-	background-position: right; /* kuvan sijainti taustalla */
-	background-size: contain;
 	max-width: 100%;
 }
 
@@ -467,13 +470,6 @@ header[active] {
 .card:hover {
 	margin-top: 0px;
 	margin-bottom: 30px;
-}
-
-.screen {
-	border-radius: 10px;
-	margin: 0 0 20px 0;
-	overflow: hidden;
-	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
 }
 
 .gallery {
