--- a/styles.css
+++ b/styles.css
@@ -129,21 +129,6 @@ html, body {
 		color: var(--text)
 	}
 
-	img {
-		max-width: 100%;
-		object-fit: contain;
-	}
-
-	.screen {
-		border-radius: 10px;
-		margin: 0 0 20px 0;
-		overflow: hidden;
-		box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
-		max-height: 65vh;
-		width: fit-content;
-		height: fit-content;
-	}
-
 	.button {
 		display: flex;
 		padding: 0px 30px;
@@ -470,6 +455,20 @@ header[active] {
 .card:hover {
 	margin-top: 0px;
 	margin-bottom: 30px;
+}
+
+img {
+	max-width: 100%;
+	object-fit: contain;
+	height: auto;
+}
+
+.screen {
+	border-radius: 10px;
+	margin: 0 0 20px 0;
+	overflow: hidden;
+	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
+	max-height: 65vh;
 }
 
 .gallery {
