--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ img {
 	.galleryimage {
 		display: flex;
 		width: 150px;
-		aspect-ratio: 1/1;
+		height: 150px;
 		border-radius: 5px;
 		margin: 10px 0 10px;
 		object-fit: cover;
