--- a/styles.css
+++ b/styles.css
@@ -330,16 +330,9 @@ header[active] {
 	align-items: center;
 	overflow: hidden;
 	margin: 0 0 20px 0;
+	aspect-ratio: 1 / 1;
 	max-width: 100%;
-	height: auto;
-	aspect-ratio: 1/1;
-}
-
-.picture {
-	display: flex;
-	aspect-ratio: 1/1;
-	max-width: 100%;
-	border-radius: 100%;
+	max-height: 66vh;
 }
 
 
@@ -347,8 +340,6 @@ header[active] {
 /* BODY */
 
 .content-field {
-	display: flex;
-	flex-direction: column;
 	width: 90%;
 	padding: 50px 5% 25px 5%;
 	background-position: center; /* kuvan sijainti taustalla */
@@ -556,7 +547,7 @@ footer .navbar {
 	}
 	
 .content-field {
-	align-items: flex-start !important;
+	text-align: -webkit-left !important;
 	width: 90% !important;
 }
 	
