--- a/styles.css
+++ b/styles.css
@@ -330,9 +330,17 @@ header[active] {
 	align-items: center;
 	overflow: hidden;
 	margin: 0 0 20px 0;
-	aspect-ratio: 1 / 1;
+	height: auto;
+	width: 350px;
 	max-width: 100%;
-	max-height: 66vh;
+}
+
+.picture {
+	aspect-ratio: 1/1;
+	border-radius: 100%;
+	width: 400px;
+	object-fit: 90%;
+	object-position: top;
 }
 
 
