--- a/styles.css
+++ b/styles.css
@@ -325,22 +325,16 @@ header[active] {
 
 .pictureframe {
 	display: flex;
+	background-size: contain;
+	background-position: top center;
+	background-repeat: no-repeat;
 	border-radius: 100%;
-	justify-content: center;
-	align-items: center;
 	overflow: hidden;
 	margin: 0 0 20px 0;
+	aspect-ratio: 1/ 1;
+	width: 100%;
 	height: auto;
-	width: 350px;
 	max-width: 100%;
-}
-
-.picture {
-	aspect-ratio: 1/1;
-	border-radius: 100%;
-	width: 400px;
-	object-fit: 90%;
-	object-position: top;
 }
 
 
@@ -397,6 +391,7 @@ header[active] {
 
 img {
 	max-width: 100%;
+	max-height: 100%;
 	object-fit: contain;
 	height: auto;
 }
