--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ html, body {
 		max-width: 100%;
 		width: fit-content;
 		height: fit-content;
-		gap: 5px 5px;
+		gap: 5px;
 		align-items: center;
 		justify-content: center;
 	}
@@ -181,7 +181,7 @@ html, body {
 
 		.minisection:has(.button) {
 			margin: 0 0 35px 0;
-			gap: 20px 20px;
+			gap: 20px;
 		}
 
 
