--- a/styles.css
+++ b/styles.css
@@ -156,8 +156,8 @@ html, body {
 			/* background-color: rgba(255, 255, 255, 0.10); */
 			background: none;
 			color: var(--primary);
-			outline: 2px solid;
-			outline-offset: -2px;
+			border: 2px solid;
+    		box-sizing: border-box;
 		}
 
 			.darkmode .secondarybutton {
