--- a/styles.css
+++ b/styles.css
@@ -344,7 +344,7 @@ header[active] {
 	justify-content: center;
 	border-radius: 100%;
 	overflow: hidden;
-	margin: 0 0 20px 0;
+	margin: 0 0 25px 0;
 	aspect-ratio: 1/ 1;
 	width: 100%;
 	background-size: cover;
@@ -395,7 +395,7 @@ header[active] {
 	width: calc(100% - 50px);
 	border-radius: 10px;
 	margin: 10px 0 30px 0;
-	padding: 25px;
+	padding: 25px 25px 0 25px;
 	gap: 0 5%;
 	transition: 0.2s ease-in-out;
 	/* box-shadow: 2px 2px 10px 0px rgba(0, 0, 255, 0.2); */
