--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ html, body {
 	h2 {
 		font-weight: 400;
 		font-family: 'DM Serif Text', serif;
-		font-size: 30px;
+		font-size: 36px;
 		margin: 0 0 25px 0;
 	}
 
@@ -337,6 +337,21 @@ header[active] {
 	background-repeat: no-repeat;
 }
 
+	.svg {
+		position: relative;
+		width: 0;
+		height: 0;
+	}
+	.divider {
+		width: 100%;
+		height: 80px;
+		background-color: white;
+		background-size: cover;
+		margin-bottom: -2px;
+		-webkit-clip-path: url(#my-clip-path);
+		clip-path: url(#my-clip-path);
+	}
+
 .pictureframe {
 	display: flex;
 	flex-direction: column;
@@ -387,7 +402,7 @@ header[active] {
 	width: 100%;
 	flex-direction: row;
 	justify-content: center;
-	gap: 0 35px;
+	gap: 0 40px;
 }
 
 .card {
@@ -427,9 +442,9 @@ header[active] {
 
 	.galleryimage {
 		display: flex;
-		width: 150px;
-		height: 150px;
-		border-radius: 5px;
+		width: 200px;
+		height: 200px;
+		border-radius: 100%;
 		margin: 10px 0 10px;
 		object-fit: cover;
 		overflow: hidden;
