--- a/styles.css
+++ b/styles.css
@@ -413,7 +413,8 @@ header[active] {
 	padding: 25px 25px 0 25px;
 	gap: 0 5%;
 	transition: 0.2s ease-in-out;
-	/* box-shadow: 2px 2px 10px 0px rgba(0, 0, 255, 0.2); */
+	background-color: white;
+	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
 }
 
 .card:hover {
