--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ html, body {
 		max-height: 100%;
 		object-fit: contain;
 		height: auto;
+		z-index: 1;
 	}
 
 	.darkmode {
@@ -347,7 +348,8 @@ header[active] {
 		height: 80px;
 		background-color: white;
 		background-size: cover;
-		margin-bottom: -2px;
+		margin-bottom: -1px;
+		margin-top: -1px;
 		-webkit-clip-path: url(#my-clip-path);
 		clip-path: url(#my-clip-path);
 	}
@@ -407,20 +409,30 @@ header[active] {
 
 .card {
 	display: flex;
-	width: calc(100% - 50px);
+	flex-direction: column;
+	width: 100%;
 	border-radius: 10px;
 	margin: 10px 0 30px 0;
-	padding: 25px 25px 0 25px;
-	gap: 0 5%;
 	transition: 0.2s ease-in-out;
 	background-color: white;
 	box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.25);
+	overflow: hidden;
 }
 
 .card:hover {
 	margin-top: 0px;
 	margin-bottom: 40px;
 }
+
+	.card .content-field {
+		width: calc(100% - 40px) !important;
+		border-radius: 10px 10px 0 0;
+		padding: 0 20px 0 20px;
+	}
+
+	.card .content-field:first-of-type {
+		justify-content: center;
+	}
 
 .screen {
 	border-radius: 10px;
