--- a/styles.css
+++ b/styles.css
@@ -427,11 +427,7 @@ header[active] {
 	.card .content-field {
 		width: calc(100% - 40px) !important;
 		border-radius: 10px 10px 0 0;
-		padding: 0 20px 0 20px;
-	}
-
-	.card .content-field:first-of-type {
-		justify-content: center;
+		padding: 10px 25px 0 25px;
 	}
 
 .screen {
