--- a/styles.css
+++ b/styles.css
@@ -234,12 +234,6 @@ main {
 			padding: 0;
 		}
 
-		.content-field ul {
-			margin: 0;
-			line-height: 1.6;
-			padding-inline-start: 1em;
-		}
-
 	.column {
 		display: flex;
 		flex-direction: row;
@@ -257,7 +251,8 @@ main {
 			width: 120%;
 		}
 
-		.card img {
+		.card img,
+		.sample img {
 			-webkit-filter: drop-shadow(16px 16px 32px rgba(0,0,0,0.15))
 		}
 
