--- a/styles.css
+++ b/styles.css
@@ -311,6 +311,12 @@ main {
 		font-size: 0.8em;
 	}
 
+	.headertag {
+		justify-content: center;
+		margin-top: -16px;
+		margin-bottom: 16px;
+	}
+
 	.tagsection {
 		display: flex;
 		flex-wrap: wrap;
