--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,7 @@ main {
 
 	.pictureframe {
 		overflow: hidden;
+		width: 180px;
 		max-width: 100%;
 		aspect-ratio: 1/ 1;
 		border-radius: 100%;
