--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ main {
 
 	.pictureframe {
 		overflow: hidden;
-		width: 180px;
+		width: 184px;
 		max-width: 100%;
 		aspect-ratio: 1/ 1;
 		border-radius: 100%;
@@ -418,6 +418,10 @@ footer {
 	.content-field {
 		align-items: flex-start !important;
 		width: 90% !important;
+	}
+
+	.pictureframe {
+		width: auto;
 	}
 	
 }
