--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,9 @@ main {
 		transition: 0.2s ease-in-out;
 		justify-content: space-between;
 		align-items: center;
+		background-color: rgba(0, 0, 0, 0.05);
+		padding: 24px;
+		border-radius: 8px;
 	}
 
 		.card:hover,
