--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ main {
 		justify-content: space-between;
 		align-items: center;
 		background-color: rgba(0, 0, 0, 0.05);
-		padding: 24px;
+		padding: 24px !important;
 		border-radius: 8px;
 	}
 
