--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,7 @@ main {
 		background-color: rgba(0, 0, 0, 0.05);
 		padding: 24px !important;
 		border-radius: 8px;
+		width: -webkit-fill-available;
 	}
 
 		.card img,
