--- a/styles.css
+++ b/styles.css
@@ -236,13 +236,15 @@ main {
 	}
 
 	.card {
-		transition: 0.2s ease-in-out;
+		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		background-color: rgba(0, 0, 0, 0.05);
-		padding: 24px !important;
-		border-radius: 8px;
 		width: -webkit-fill-available;
+		background-color: rgba(0, 0, 0, 0.05);
+		padding: 24px;
+		border-radius: 8px;
+		gap: 16px;
 	}
 
 		.card img,
