--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ html, body {
 		font-size: 3.2em;
 		margin: 0 0 8px 0;
 		line-height: 1;
+		text-align: center;
 	}
 
 	h2 {
@@ -65,7 +66,13 @@ html, body {
 		font-size: 2.5em;
 		margin: 0 0 8px 0;
 		line-height: 1;
+		text-align: center;
 	}
+
+		.column h1,
+		.column h2 {
+			text-align: left;
+		}
 
 	h3 {
 		font-weight: 700;
