--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700;800&display=swap'); /* FONTTI */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200'); /* IKONIT */
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css); /* SOMEIKONIT */
 
 
 
 html, body {
-	font-family: 'Inter', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	color: var(--primary);
 	background-color: var(--secondary);
