--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,13 @@ html, body {
 	h3 {
 		font-weight: 700;
 		font-size: 1.3em;
-		margin: 0;
+		margin: 0 0 -14px 0;
 		line-height: 1;
 	}
+
+		.minisection h3 {
+			margin: 0 0 2px 0;
+		}
 
 	p {
 		font-weight: normal;
