--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,11 @@ main {
 			-webkit-filter: drop-shadow(16px 16px 16px rgba(0,0,0,0.15))
 		}
 
+		.cardsection {
+			display: flex;
+			justify-content: space-between;
+		}
+
 	.pictureframe {
 		overflow: hidden;
 		align-self: center;
