--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,10 @@ main {
 			width: -webkit-fill-available;
 		}
 
+			.cardsection::after {
+				content: a;
+			}
+
 	.pictureframe {
 		overflow: hidden;
 		align-self: center;
