--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,7 @@ main {
 			width: -webkit-fill-available;
 			align-items: center;
 			gap: 4px;
+			font-weight: bold;
 		}
 
 			.cardsection::after {
