--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,7 @@ html, body {
 
 	:root {
 		--primary: #033333;
-		--secondary: #F2F3F3;
-		--tertiary: #d9b100;
+		--secondary: ghostwhite;
 	}
 
 
