--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,11 @@ main {
 		white-space: nowrap;
 	}
 
+		.button::after {
+			font-family: 'FontAwesome';
+			content: '\f105';
+		}
+
 	.info {
 		width: fit-content !important;
 	}
