--- a/styles.css
+++ b/styles.css
@@ -253,15 +253,10 @@ main {
 		.cardsection {
 			display: flex;
 			width: -webkit-fill-available;
-			justify-content: center;
+			justify-content: space-between;
 			align-items: center;
 			gap: 8px;
 		}
-
-			.cardsection::after {
-				font-family: 'FontAwesome';
-				content: '\f105';
-			}
 
 	.pictureframe {
 		overflow: hidden;
