--- a/styles.css
+++ b/styles.css
@@ -279,9 +279,7 @@ main {
 		border-radius: 4px;
 		background-color: var(--primary);
 		color: var(--secondary);
-		outline: none;
-		white-space: nowrap;
-		gap: 24px;
+		gap: 8px;
 	}
 
 	.button:hover {
@@ -289,7 +287,6 @@ main {
 		color: var(--primary);
 		outline: 1.5px solid;
 		outline-offset: -1.5px;
-		white-space: nowrap;
 	}
 
 		.button::after {
@@ -347,7 +344,7 @@ footer {
 	}
 
 	.section h3 {
-		padding: 0;
+		margin: 0;
 	}
 
 		.minisection {
