--- a/styles.css
+++ b/styles.css
@@ -251,9 +251,22 @@ main {
 		.cardsection {
 			display: flex;
 			width: -webkit-fill-available;
-			justify-content: space-between;
+			justify-content: center;
 			align-items: center;
 			gap: 24px;
+		}
+
+		.cardsection::after {
+			display: flex;
+			height: 48px;
+			aspect-ratio: 1 / 1;
+			font-family: 'FontAwesome';
+			content: '\f105';
+			justify-content: center;
+			align-items: center;
+			border-radius: 8px;
+			outline: 1.5px solid;
+			outline-offset: -1.5px;	
 		}
 
 	.pictureframe {
