--- a/styles.css
+++ b/styles.css
@@ -333,6 +333,12 @@ main {
 		align-items: center;
 	}
 
+	.logosection {
+		display: flex;
+		justify-content: space-between;
+		gap: 32px;
+	}
+
 
 
 /* FOOTER */
