--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ html, body {
 
 	:root {
 		--primary: #033333;
+		--primary-transparent: rgba(3, 51, 51, 0.05);
 		--secondary: ghostwhite;
 	}
 
@@ -234,7 +235,7 @@ main {
 		justify-content: space-between;
 		align-items: center;
 		width: -webkit-fill-available;
-		background-color: rgba(3, 51, 51, 0.05);
+		background-color: var(--primary-transparent);
 		padding: 40px;
 		gap: 40px;
 		border-radius: 8px;
@@ -316,9 +317,7 @@ main {
 		width: fit-content;
 		padding: 8px 16px;
 		border-radius: 80px;
-		color: var(--primary);
-		outline: 1.5px solid;
-		outline-offset: -1.5px;
+		background-color: var(--primary-transparent);
 		white-space: nowrap;
 		font-size: 0.8em;
 	}
