--- a/styles.css
+++ b/styles.css
@@ -245,32 +245,30 @@ main {
 			transition: transform .4s ease-in-out;
 		}
 
-		.card img:hover {
+		.card:hover img {
 			transform: scale(1.05);
 		}
 
 		.cardsection {
 			display: flex;
 			width: -webkit-fill-available;
-			justify-content: center;
-			align-items: center;
+			justify-content: space-between;
 			gap: 24px;
 		}
 
 		.cardsection::after {
-			display: flex;
-			height: 48px;
+			height: 100%;
 			aspect-ratio: 1 / 1;
 			font-family: 'FontAwesome';
 			content: '\f105';
-			justify-content: center;
-			align-items: center;
+			text-align: center;
+			align-content: center;
 			border-radius: 8px;
 			outline: 1.5px solid;
 			outline-offset: -1.5px;	
 		}
 
-		.cardsection:hover:after {
+		.card:hover .cardsection::after {
 			background-color: var(--primary);
 			color: var(--secondary);
 			outline: none;
