--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,7 @@ main {
 			background-color: var(--primary-transparent);
 			border-radius: 8px;
 			width: -webkit-fill-available;
+			min-height: -webkit-fill-available;
 		}
 
 		.card img, .sample img {
