--- a/styles.css
+++ b/styles.css
@@ -265,8 +265,8 @@ main {
 		}
 
 		.cardsection::after {
-			height: 100%;
-			aspect-ratio: 1 / 1;
+			width: 48px;
+			height: 48px;
 			font-family: 'FontAwesome';
 			content: '\f105';
 			text-align: center;
